# Catalyst

./: .clang-format  .clangd  .gitignore  .gitmodules  GNUmakefile  README.md  limine.cfg  limine.conf  meta.sh
kernel/: CMakeLists.txt  GNUmakefile  linker-riscv64.ld  linker-x86_64.ld  main.c
kernel/arch/: api.h  api_x86_64.c
kernel/arch/x86_64/: cpu.asm  exceptions.asm  exceptions.c  exceptions.h  gdt.c  gdt.h  idt.c  idt.h  serial.c  serial.h  tss.c  tss.h
kernel/arch/x86_64/cpuid/: cpuid.h
kernel/arch/x86_64/memory/: frame_alloc.c  frame_alloc.h  vmm.c  vmm.h
kernel/boot/: requests.c  requests.h
kernel/drivers/uart/ns16550/: serial.c  serial.h
kernel/entry/: main.c
kernel/flanterm/: flanterm.c  flanterm.h
kernel/flanterm/backends/: fb.c  fb.h
kernel/hlk/: catalyst.c  catalyst_main.c  log.c  main.c  type_conv.c
kernel/hlk/include/: log.h  type_conv.h
kernel/hlk/log/: log.c  string.c  type_conv.c
kernel/hlk/log/include/: log.h  string.h  type_conv.h
kernel/init/: init.c  init.h
kernel/isa/: api_x86_64.c  types.h
kernel/isa/include/: api.h  types.h
kernel/isa/x86_64/: cpu.asm  cpu.h  exceptions.c  gdt.c  gdt.h  idt.c  serial.c  tss.c  types.h
kernel/isa/x86_64/cpuid/: cpuid.asm  cpuid.c  cpuid.h
kernel/isa/x86_64/include/: gdt.h  idt.h
kernel/isa/x86_64/init/: gdt.asm  gdt.c  gdt.h  tss.c
kernel/lib/: type_conv.c
kernel/lib/prelude/: prelude.h  typedefs.h
kernel/lib/string/: string.h
kernel/libk/: type_conv.c
kernel/libk/include/: string.h  type_conv.h
kernel/linker/: linker-aarch64.ld
kernel/llk/: llk_api_x86_64.c
kernel/llk/include/: llk_api.h
kernel/llk/isa/: api_x86_64.c
kernel/llk/x86_64/: cpu.asm  gdt.c  lgdt.asm  serial.c  tss.c
kernel/log/: font.c  font.h  log.c  log.h  printf.c  printf.h  printv.c  printv.h
kernel/log/include/: log.h
kernel/log/source/: log.c
kernel/memory/: frame_alloc.c
kernel/memory/include/: frame_alloc.h
kernel/memory/pfa/: pfa.c
kernel/panic/: api.c  api.h
kernel/panic/include/: api.h
kernel/src/arch/: api.h
kernel/src/boot/: requests.c  requests.h
kernel/src/entry/: main.c
kernel/src/libk/: common.c  common.h  lpbuf.h  lpstr.h
kernel/src/log/: log.c
kernel/src/panic/: api.h
kernel/utility/: string.c  string.h  type_conv.c
kernel/utility/include/: type_conv.h
(+48 files in other folders)
